# fomo

./: .copier-answers.yml  .gitignore  CLAUDE.md  LICENSE  README.md  index.json  info.json  manage.py  pyproject.toml  regressions.xml  test_query_sbdb.json
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: build-documentation.yml  pre-commit-ci.yml  publish-benchmarks-pr.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
.planning/: .continue-here.md  Findings.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.3-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: knowledge-base.md  range-window-calendar-event.md  site-search-widget-query-param-mismatch.md  sites-needing-review-placement-and-placeholder-correction.md
.planning/milestones/: 1.0-REQUIREMENTS.md  1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-REQUIREMENTS.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.1-REQUIREMENTS.md
.planning/notes/: 2026-07-05-v2-1-phase-18-implementation-hints.md  web-form-vs-file-ingest.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-file-upstream-tom-eso-feature-requests.md  SEED-002-eso-observationrecord-centric-sync-architecture.md  target-linked-run-submission-form.md
FOMO/: wsgi.py
_results/gh-runner/: 0946f777-virtualenv-py3.10-Cython-build-packaging.json  09dd8f86-virtualenv-py3.10-Cython-build-packaging.json  0a3783b9-virtualenv-py3.10-Cython-build-packaging.json  23e9b1cf-virtualenv-py3.10-Cython-build-packaging.json  340b05bb-virtualenv-py3.10-Cython-build-packaging.json  3a98a86f-virtualenv-py3.10-Cython-build-packaging.json  3dbd347e-virtualenv-py3.10-Cython-build-packaging.json  46d4f525-virtualenv-py3.10-Cython-build-packaging.json  611e97d8-virtualenv-py3.10-Cython-build-packaging.json  686221b2-virtualenv-py3.10-Cython-build-packaging.json  (+14 more)
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst  installation.rst  notebooks.rst  scout_kafka_bridge_feasibility.md
solsys_code/: admin.py  apps.py  calendar_urls.py  calendar_utils.py  campaign_filters.py  campaign_forms.py  campaign_gap.py  campaign_tables.py  campaign_urls.py  campaign_utils.py  campaign_views.py  ephem_utils.py  forms.py  mixins.py  models.py  rubin_too.py  scout_views.py  telescope_runs.py  utils.py  views.py
(+611 files in other folders)
